@@ -46,6 +46,12 @@ New in spot 2.7.4.dev (not yet released)
     acceptance condition.  The output can be alternating only if the
     input was alternating.
 
+  - The parser for SERE learned to recognize the ##n and ##[i:j]
+    operators from SVA.  So {##2 a ##0 b[+] ##1 c ##2 e} is another
+    way to write {[*2];a:b[+];c;1;e}, and {a ##[i:j] b} is parsed as
+    {a:{[*i..j];b}}.  The formula::sugar_delay() function implement
+    this SVA operator in terms of the existing PSL operators.
+
 New in spot 2.7.4 (2019-04-27)
 
   Bugs fixed:
